--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,105 @@
-# Имя workflow - будет отображаться в GitHub Actions
-name: Build Online Store
+name: Build and Publish Docker Image
 
-# Когда запускать workflow
 on:
-  # На push в ветки main или master
   push:
     branches: [ main, master ]
-  # На pull request в ветки main или master
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main, master ]
 
-# Что делать (задачи)
 jobs:
-  # Название задачи
-  build:
-    # Где запускать (виртуальная машина)
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
-    
-    # Шаги выполнения
     steps:
-      # Шаг 1: Клонировать репозиторий
       - name: Checkout code
         uses: actions/checkout@v4
-      
-      # Шаг 2: Установить Java
+
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
-      
-      # Шаг 3: Собрать проект
-      - name: Build with Maven
-        run: mvn clean package
-      
-      # Шаг 4: Сохранить результат
-      - name: Upload JAR
+          cache: maven
+
+      - name: Run tests
+        run: mvn clean test
+
+      - name: Upload test reports
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: online-store-jar
+          name: test-reports
+          path: target/surefire-reports/
+
+  build:
+    name: Build Application
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
           path: target/*.jar
+
+  docker:
+    name: Build and Push Docker Image
+    needs: build
+    runs-on: ubuntu-latest
+    # Только при push в main/master или создании тега
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v'))
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+          path: target/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
+            type=sha,format=short
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
