--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,10 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    steps:
+    permissions:              # <--- Добавьте этот блок
+      contents: read          #     (нужно для чтения кода)
+      packages: write  
+ steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
