--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.MY_TOKEN }}
+          password: ${{ secrets.TTT }}
 
       - name: Extract metadata for Docker
         id: meta
